project2-Syntax-Analysis/seal.output
Terminals unused in grammar

    ERROR
    INT
    STRING
    BOOL
    FLOAT
    UMINUS


Grammar

    0 $accept: program $end

    1 program: decl_list

    2 decl: variableDecl
    3     | callDecl

    4 decl_list: decl
    5          | decl_list decl

    6 variableDecl: VAR variable ';'

    7 variableDecl_list: variableDecl
    8                  | variableDecl_list variableDecl

    9 variable: OBJECTID TYPEID

   10 variable_list: %empty
   11              | variable
   12              | variable_list ',' variable

   13 callDecl: FUNC OBJECTID '(' variable_list ')' TYPEID stmtBlock

   14 stmtBlock: '{' variableDecl_list stmt_list '}'
   15          | '{' stmt_list '}'
   16          | '{' variableDecl_list '}'
   17          | '{' '}'

   18 stmt: ';'
   19     | expr ';'
   20     | ifStmt
   21     | whileStmt
   22     | forStmt
   23     | breakStmt
   24     | continueStmt
   25     | returnStmt
   26     | stmtBlock

   27 stmt_list: stmt
   28          | stmt_list stmt

   29 ifStmt: IF expr stmtBlock ELSE stmtBlock
   30       | IF expr stmtBlock

   31 whileStmt: WHILE expr stmtBlock

   32 forStmt: FOR expr ';' expr ';' expr stmtBlock
   33        | FOR ';' expr ';' expr stmtBlock
   34        | FOR expr ';' ';' expr stmtBlock
   35        | FOR expr ';' expr ';' stmtBlock
   36        | FOR ';' ';' expr stmtBlock
   37        | FOR ';' expr ';' stmtBlock
   38        | FOR expr ';' ';' stmtBlock
   39        | FOR ';' ';' stmtBlock

   40 returnStmt: RETURN expr ';'
   41           | RETURN ';'

   42 continueStmt: CONTINUE ';'

   43 breakStmt: BREAK ';'

   44 expr: OBJECTID '=' expr
   45     | CONST_BOOL
   46     | CONST_INT
   47     | CONST_STRING
   48     | CONST_FLOAT
   49     | call
   50     | '(' expr ')'
   51     | OBJECTID
   52     | expr '+' expr
   53     | expr '-' expr
   54     | expr '*' expr
   55     | expr '/' expr
   56     | expr '%' expr
   57     | '-' expr
   58     | expr '<' expr
   59     | expr LE expr
   60     | expr EQUAL expr
   61     | expr NE expr
   62     | expr GE expr
   63     | expr '>' expr
   64     | expr AND expr
   65     | expr OR expr
   66     | expr '^' expr
   67     | '!' expr
   68     | '~' expr
   69     | expr '&' expr
   70     | expr '|' expr

   71 call: OBJECTID '(' actual_list ')'

   72 actual: expr

   73 actual_list: %empty
   74            | actual
   75            | actual_list ',' actual


Terminals, with rules where they appear

    $end (0) 0
    '!' (33) 67
    '%' (37) 56
    '&' (38) 69
    '(' (40) 13 50 71
    ')' (41) 13 50 71
    '*' (42) 54
    '+' (43) 52
    ',' (44) 12 75
    '-' (45) 53 57
    '/' (47) 55
    ';' (59) 6 18 19 32 33 34 35 36 37 38 39 40 41 42 43
    '<' (60) 58
    '=' (61) 44
    '>' (62) 63
    '^' (94) 66
    '{' (123) 14 15 16 17
    '|' (124) 70
    '}' (125) 14 15 16 17
    '~' (126) 68
    error (256)
    IF (258) 29 30
    ELSE (260) 29
    WHILE (261) 31
    FOR (262) 32 33 34 35 36 37 38 39
    BREAK (263) 43
    CONTINUE (264) 42
    FUNC (265) 13
    RETURN (266) 40 41
    CONST_BOOL <boolean> (267) 45
    CONST_INT <symbol> (268) 46
    CONST_STRING <symbol> (269) 47
    CONST_FLOAT <symbol> (270) 48
    VAR (271) 6
    ERROR (273)
    AND (274) 64
    OR (275) 65
    EQUAL (276) 60
    NE (277) 61
    GE (278) 62
    LE (279) 59
    INT (280)
    STRING (281)
    BOOL (282)
    FLOAT (283)
    OBJECTID <symbol> (284) 9 13 44 51 71
    TYPEID <symbol> (285) 9 13
    UMINUS (287)
    neg_expr (288)
    bracket_expr (289)
    call_expr (290)
    object_expr (291)
    const_int_expr (292)
    const_float_expr (293)
    const_string_expr (294)
    const_bool_expr (295)


Nonterminals, with rules where they appear

    $accept (57)
        on left: 0
    program <program> (58)
        on left: 1
        on right: 0
    decl <decl> (59)
        on left: 2 3
        on right: 4 5
    decl_list <decls> (60)
        on left: 4 5
        on right: 1 5
    variableDecl <variableDecl> (61)
        on left: 6
        on right: 2 7 8
    variableDecl_list <variableDecls> (62)
        on left: 7 8
        on right: 8 14 16
    variable <variable> (63)
        on left: 9
        on right: 6 11 12
    variable_list <variables> (64)
        on left: 10 11 12
        on right: 12 13
    callDecl <callDecl> (65)
        on left: 13
        on right: 3
    stmtBlock <stmtBlock> (66)
        on left: 14 15 16 17
        on right: 13 26 29 30 31 32 33 34 35 36 37 38 39
    stmt <stmt> (67)
        on left: 18 19 20 21 22 23 24 25 26
        on right: 27 28
    stmt_list <stmts> (68)
        on left: 27 28
        on right: 14 15 28
    ifStmt <ifStmt> (69)
        on left: 29 30
        on right: 20
    whileStmt <whileStmt> (70)
        on left: 31
        on right: 21
    forStmt <forStmt> (71)
        on left: 32 33 34 35 36 37 38 39
        on right: 22
    returnStmt <returnStmt> (72)
        on left: 40 41
        on right: 25
    continueStmt <continueStmt> (73)
        on left: 42
        on right: 24
    breakStmt <breakStmt> (74)
        on left: 43
        on right: 23
    expr <expr> (75)
        on left: 44 45 46 47 48 49 50 51 52 53 54 55 56 57 58 59 60 61 62 63 64 65 66 67 68 69 70
        on right: 19 29 30 31 32 33 34 35 36 37 38 40 44 50 52 53 54 55 56 57 58 59 60 61 62 63 64 65 66 67 68 69 70 72
    call <call> (76)
        on left: 71
        on right: 49
    actual <actual> (77)
        on left: 72
        on right: 74 75
    actual_list <actuals> (78)
        on left: 73 74 75
        on right: 71 75


State 0

    0 $accept: . program $end

    FUNC  shift, and go to state 1
    VAR   shift, and go to state 2

    program       go to state 3
    decl          go to state 4
    decl_list     go to state 5
    variableDecl  go to state 6
    callDecl      go to state 7


State 1

   13 callDecl: FUNC . OBJECTID '(' variable_list ')' TYPEID stmtBlock

    OBJECTID  shift, and go to state 8


State 2

    6 variableDecl: VAR . variable ';'

    OBJECTID  shift, and go to state 9

    variable  go to state 10


State 3

    0 $accept: program . $end

    $end  shift, and go to state 11


State 4

    4 decl_list: decl .

    $default  reduce using rule 4 (decl_list)


State 5

    1 program: decl_list .
    5 decl_list: decl_list . decl

    FUNC  shift, and go to state 1
    VAR   shift, and go to state 2

    $default  reduce using rule 1 (program)

    decl          go to state 12
    variableDecl  go to state 6
    callDecl      go to state 7


State 6

    2 decl: variableDecl .

    $default  reduce using rule 2 (decl)


State 7

    3 decl: callDecl .

    $default  reduce using rule 3 (decl)


State 8

   13 callDecl: FUNC OBJECTID . '(' variable_list ')' TYPEID stmtBlock

    '('  shift, and go to state 13


State 9

    9 variable: OBJECTID . TYPEID

    TYPEID  shift, and go to state 14


State 10

    6 variableDecl: VAR variable . ';'

    ';'  shift, and go to state 15


State 11

    0 $accept: program $end .

    $default  accept


State 12

    5 decl_list: decl_list decl .

    $default  reduce using rule 5 (decl_list)


State 13

   13 callDecl: FUNC OBJECTID '(' . variable_list ')' TYPEID stmtBlock

    OBJECTID  shift, and go to state 9

    $default  reduce using rule 10 (variable_list)

    variable       go to state 16
    variable_list  go to state 17


State 14

    9 variable: OBJECTID TYPEID .

    $default  reduce using rule 9 (variable)


State 15

    6 variableDecl: VAR variable ';' .

    $default  reduce using rule 6 (variableDecl)


State 16

   11 variable_list: variable .

    $default  reduce using rule 11 (variable_list)


State 17

   12 variable_list: variable_list . ',' variable
   13 callDecl: FUNC OBJECTID '(' variable_list . ')' TYPEID stmtBlock

    ','  shift, and go to state 18
    ')'  shift, and go to state 19


State 18

   12 variable_list: variable_list ',' . variable

    OBJECTID  shift, and go to state 9

    variable  go to state 20


State 19

   13 callDecl: FUNC OBJECTID '(' variable_list ')' . TYPEID stmtBlock

    TYPEID  shift, and go to state 21


State 20

   12 variable_list: variable_list ',' variable .

    $default  reduce using rule 12 (variable_list)


State 21

   13 callDecl: FUNC OBJECTID '(' variable_list ')' TYPEID . stmtBlock

    '{'  shift, and go to state 22

    stmtBlock  go to state 23


State 22

   14 stmtBlock: '{' . variableDecl_list stmt_list '}'
   15          | '{' . stmt_list '}'
   16          | '{' . variableDecl_list '}'
   17          | '{' . '}'

    IF            shift, and go to state 24
    WHILE         shift, and go to state 25
    FOR           shift, and go to state 26
    BREAK         shift, and go to state 27
    CONTINUE      shift, and go to state 28
    RETURN        shift, and go to state 29
    VAR           shift, and go to state 2
    CONST_BOOL    shift, and go to state 30
    CONST_INT     shift, and go to state 31
    CONST_STRING  shift, and go to state 32
    CONST_FLOAT   shift, and go to state 33
    OBJECTID      shift, and go to state 34
    '-'           shift, and go to state 35
    '!'           shift, and go to state 36
    '~'           shift, and go to state 37
    ';'           shift, and go to state 38
    '('           shift, and go to state 39
    '{'           shift, and go to state 22
    '}'           shift, and go to state 40

    variableDecl       go to state 41
    variableDecl_list  go to state 42
    stmtBlock          go to state 43
    stmt               go to state 44
    stmt_list          go to state 45
    ifStmt             go to state 46
    whileStmt          go to state 47
    forStmt            go to state 48
    returnStmt         go to state 49
    continueStmt       go to state 50
    breakStmt          go to state 51
    expr               go to state 52
    call               go to state 53


State 23

   13 callDecl: FUNC OBJECTID '(' variable_list ')' TYPEID stmtBlock .

    $default  reduce using rule 13 (callDecl)


State 24

   29 ifStmt: IF . expr stmtBlock ELSE stmtBlock
   30       | IF . expr stmtBlock

    CONST_BOOL    shift, and go to state 30
    CONST_INT     shift, and go to state 31
    CONST_STRING  shift, and go to state 32
    CONST_FLOAT   shift, and go to state 33
    OBJECTID      shift, and go to state 34
    '-'           shift, and go to state 35
    '!'           shift, and go to state 36
    '~'           shift, and go to state 37
    '('           shift, and go to state 39

    expr  go to state 54
    call  go to state 53


State 25

   31 whileStmt: WHILE . expr stmtBlock

    CONST_BOOL    shift, and go to state 30
    CONST_INT     shift, and go to state 31
    CONST_STRING  shift, and go to state 32
    CONST_FLOAT   shift, and go to state 33
    OBJECTID      shift, and go to state 34
    '-'           shift, and go to state 35
    '!'           shift, and go to state 36
    '~'           shift, and go to state 37
    '('           shift, and go to state 39

    expr  go to state 55
    call  go to state 53


State 26

   32 forStmt: FOR . expr ';' expr ';' expr stmtBlock
   33        | FOR . ';' expr ';' expr stmtBlock
   34        | FOR . expr ';' ';' expr stmtBlock
   35        | FOR . expr ';' expr ';' stmtBlock
   36        | FOR . ';' ';' expr stmtBlock
   37        | FOR . ';' expr ';' stmtBlock
   38        | FOR . expr ';' ';' stmtBlock
   39        | FOR . ';' ';' stmtBlock

    CONST_BOOL    shift, and go to state 30
    CONST_INT     shift, and go to state 31
    CONST_STRING  shift, and go to state 32
    CONST_FLOAT   shift, and go to state 33
    OBJECTID      shift, and go to state 34
    '-'           shift, and go to state 35
    '!'           shift, and go to state 36
    '~'           shift, and go to state 37
    ';'           shift, and go to state 56
    '('           shift, and go to state 39

    expr  go to state 57
    call  go to state 53


State 27

   43 breakStmt: BREAK . ';'

    ';'  shift, and go to state 58


State 28

   42 continueStmt: CONTINUE . ';'

    ';'  shift, and go to state 59


State 29

   40 returnStmt: RETURN . expr ';'
   41           | RETURN . ';'

    CONST_BOOL    shift, and go to state 30
    CONST_INT     shift, and go to state 31
    CONST_STRING  shift, and go to state 32
    CONST_FLOAT   shift, and go to state 33
    OBJECTID      shift, and go to state 34
    '-'           shift, and go to state 35
    '!'           shift, and go to state 36
    '~'           shift, and go to state 37
    ';'           shift, and go to state 60
    '('           shift, and go to state 39

    expr  go to state 61
    call  go to state 53


State 30

   45 expr: CONST_BOOL .

    $default  reduce using rule 45 (expr)


State 31

   46 expr: CONST_INT .

    $default  reduce using rule 46 (expr)


State 32

   47 expr: CONST_STRING .

    $default  reduce using rule 47 (expr)


State 33

   48 expr: CONST_FLOAT .

    $default  reduce using rule 48 (expr)


State 34

   44 expr: OBJECTID . '=' expr
   51     | OBJECTID .
   71 call: OBJECTID . '(' actual_list ')'

    '='  shift, and go to state 62
    '('  shift, and go to state 63

    $default  reduce using rule 51 (expr)


State 35

   57 expr: '-' . expr

    CONST_BOOL    shift, and go to state 30
    CONST_INT     shift, and go to state 31
    CONST_STRING  shift, and go to state 32
    CONST_FLOAT   shift, and go to state 33
    OBJECTID      shift, and go to state 34
    '-'           shift, and go to state 35
    '!'           shift, and go to state 36
    '~'           shift, and go to state 37
    '('           shift, and go to state 39

    expr  go to state 64
    call  go to state 53


State 36

   67 expr: '!' . expr

    CONST_BOOL    shift, and go to state 30
    CONST_INT     shift, and go to state 31
    CONST_STRING  shift, and go to state 32
    CONST_FLOAT   shift, and go to state 33
    OBJECTID      shift, and go to state 34
    '-'           shift, and go to state 35
    '!'           shift, and go to state 36
    '~'           shift, and go to state 37
    '('           shift, and go to state 39

    expr  go to state 65
    call  go to state 53


State 37

   68 expr: '~' . expr

    CONST_BOOL    shift, and go to state 30
    CONST_INT     shift, and go to state 31
    CONST_STRING  shift, and go to state 32
    CONST_FLOAT   shift, and go to state 33
    OBJECTID      shift, and go to state 34
    '-'           shift, and go to state 35
    '!'           shift, and go to state 36
    '~'           shift, and go to state 37
    '('           shift, and go to state 39

    expr  go to state 66
    call  go to state 53


State 38

   18 stmt: ';' .

    $default  reduce using rule 18 (stmt)


State 39

   50 expr: '(' . expr ')'

    CONST_BOOL    shift, and go to state 30
    CONST_INT     shift, and go to state 31
    CONST_STRING  shift, and go to state 32
    CONST_FLOAT   shift, and go to state 33
    OBJECTID      shift, and go to state 34
    '-'           shift, and go to state 35
    '!'           shift, and go to state 36
    '~'           shift, and go to state 37
    '('           shift, and go to state 39

    expr  go to state 67
    call  go to state 53


State 40

   17 stmtBlock: '{' '}' .

    $default  reduce using rule 17 (stmtBlock)


State 41

    7 variableDecl_list: variableDecl .

    $default  reduce using rule 7 (variableDecl_list)


State 42

    8 variableDecl_list: variableDecl_list . variableDecl
   14 stmtBlock: '{' variableDecl_list . stmt_list '}'
   16          | '{' variableDecl_list . '}'

    IF            shift, and go to state 24
    WHILE         shift, and go to state 25
    FOR           shift, and go to state 26
    BREAK         shift, and go to state 27
    CONTINUE      shift, and go to state 28
    RETURN        shift, and go to state 29
    VAR           shift, and go to state 2
    CONST_BOOL    shift, and go to state 30
    CONST_INT     shift, and go to state 31
    CONST_STRING  shift, and go to state 32
    CONST_FLOAT   shift, and go to state 33
    OBJECTID      shift, and go to state 34
    '-'           shift, and go to state 35
    '!'           shift, and go to state 36
    '~'           shift, and go to state 37
    ';'           shift, and go to state 38
    '('           shift, and go to state 39
    '{'           shift, and go to state 22
    '}'           shift, and go to state 68

    variableDecl  go to state 69
    stmtBlock     go to state 43
    stmt          go to state 44
    stmt_list     go to state 70
    ifStmt        go to state 46
    whileStmt     go to state 47
    forStmt       go to state 48
    returnStmt    go to state 49
    continueStmt  go to state 50
    breakStmt     go to state 51
    expr          go to state 52
    call          go to state 53


State 43

   26 stmt: stmtBlock .

    $default  reduce using rule 26 (stmt)


State 44

   27 stmt_list: stmt .

    $default  reduce using rule 27 (stmt_list)


State 45

   15 stmtBlock: '{' stmt_list . '}'
   28 stmt_list: stmt_list . stmt

    IF            shift, and go to state 24
    WHILE         shift, and go to state 25
    FOR           shift, and go to state 26
    BREAK         shift, and go to state 27
    CONTINUE      shift, and go to state 28
    RETURN        shift, and go to state 29
    CONST_BOOL    shift, and go to state 30
    CONST_INT     shift, and go to state 31
    CONST_STRING  shift, and go to state 32
    CONST_FLOAT   shift, and go to state 33
    OBJECTID      shift, and go to state 34
    '-'           shift, and go to state 35
    '!'           shift, and go to state 36
    '~'           shift, and go to state 37
    ';'           shift, and go to state 38
    '('           shift, and go to state 39
    '{'           shift, and go to state 22
    '}'           shift, and go to state 71

    stmtBlock     go to state 43
    stmt          go to state 72
    ifStmt        go to state 46
    whileStmt     go to state 47
    forStmt       go to state 48
    returnStmt    go to state 49
    continueStmt  go to state 50
    breakStmt     go to state 51
    expr          go to state 52
    call          go to state 53


State 46

   20 stmt: ifStmt .

    $default  reduce using rule 20 (stmt)


State 47

   21 stmt: whileStmt .

    $default  reduce using rule 21 (stmt)


State 48

   22 stmt: forStmt .

    $default  reduce using rule 22 (stmt)


State 49

   25 stmt: returnStmt .

    $default  reduce using rule 25 (stmt)


State 50

   24 stmt: continueStmt .

    $default  reduce using rule 24 (stmt)


State 51

   23 stmt: breakStmt .

    $default  reduce using rule 23 (stmt)


State 52

   19 stmt: expr . ';'
   52 expr: expr . '+' expr
   53     | expr . '-' expr
   54     | expr . '*' expr
   55     | expr . '/' expr
   56     | expr . '%' expr
   58     | expr . '<' expr
   59     | expr . LE expr
   60     | expr . EQUAL expr
   61     | expr . NE expr
   62     | expr . GE expr
   63     | expr . '>' expr
   64     | expr . AND expr
   65     | expr . OR expr
   66     | expr . '^' expr
   69     | expr . '&' expr
   70     | expr . '|' expr

    AND    shift, and go to state 73
    OR     shift, and go to state 74
    EQUAL  shift, and go to state 75
    NE     shift, and go to state 76
    GE     shift, and go to state 77
    LE     shift, and go to state 78
    '>'    shift, and go to state 79
    '<'    shift, and go to state 80
    '+'    shift, and go to state 81
    '-'    shift, and go to state 82
    '*'    shift, and go to state 83
    '/'    shift, and go to state 84
    '%'    shift, and go to state 85
    '&'    shift, and go to state 86
    '|'    shift, and go to state 87
    '^'    shift, and go to state 88
    ';'    shift, and go to state 89


State 53

   49 expr: call .

    $default  reduce using rule 49 (expr)


State 54

   29 ifStmt: IF expr . stmtBlock ELSE stmtBlock
   30       | IF expr . stmtBlock
   52 expr: expr . '+' expr
   53     | expr . '-' expr
   54     | expr . '*' expr
   55     | expr . '/' expr
   56     | expr . '%' expr
   58     | expr . '<' expr
   59     | expr . LE expr
   60     | expr . EQUAL expr
   61     | expr . NE expr
   62     | expr . GE expr
   63     | expr . '>' expr
   64     | expr . AND expr
   65     | expr . OR expr
   66     | expr . '^' expr
   69     | expr . '&' expr
   70     | expr . '|' expr

    AND    shift, and go to state 73
    OR     shift, and go to state 74
    EQUAL  shift, and go to state 75
    NE     shift, and go to state 76
    GE     shift, and go to state 77
    LE     shift, and go to state 78
    '>'    shift, and go to state 79
    '<'    shift, and go to state 80
    '+'    shift, and go to state 81
    '-'    shift, and go to state 82
    '*'    shift, and go to state 83
    '/'    shift, and go to state 84
    '%'    shift, and go to state 85
    '&'    shift, and go to state 86
    '|'    shift, and go to state 87
    '^'    shift, and go to state 88
    '{'    shift, and go to state 22

    stmtBlock  go to state 90


State 55

   31 whileStmt: WHILE expr . stmtBlock
   52 expr: expr . '+' expr
   53     | expr . '-' expr
   54     | expr . '*' expr
   55     | expr . '/' expr
   56     | expr . '%' expr
   58     | expr . '<' expr
   59     | expr . LE expr
   60     | expr . EQUAL expr
   61     | expr . NE expr
   62     | expr . GE expr
   63     | expr . '>' expr
   64     | expr . AND expr
   65     | expr . OR expr
   66     | expr . '^' expr
   69     | expr . '&' expr
   70     | expr . '|' expr
